GNOME Bugzilla – Bug 690442
[waylandsink] Should not default to a fullscreen surface
Last modified: 2012-12-26 15:14:36 UTC
When the window is created, an extra call is made to explicitly make it fullscreen. This may not be ideal-- this should be deferred to the player or the Wayland compositor. Attaching a patch. Basically, just remove that fullscreen function call.
Created attachment 231825 [details] [review] Do not create a fullscreen canvas by default Proposed patch.
Thanks, but you could have attached that to the other bug ;) (bug #688190). In future please create patches against git master or the git 1.0 branch. The 0.10 branch is no longer maintained, thanks! commit aed2c7b4790053e881c0154953eef4265cb2318b Author: Joe Konno <joe.konno@intel.com> Date: Tue Dec 18 09:53:16 2012 -0800 waylandsink: do not default to a fullscreen canvas Defer certain canvas particulars to the player (or the Wayland compositor). Before this change, a fullscreen canvas was always requested. This may not be desirable in all cases. https://bugzilla.gnome.org/show_bug.cgi?id=690442
I appreciate the feedback, Tim-Philipp, and will carry your advice forward to the next patch. Thanks for the commit! ^_^