waylandsink: do not default to a fullscreen canvas

Defer certain canvas particulars to the player (or the Wayland
compositor). Before this change, a fullscreen canvas was always
requested. This may not be desirable in all cases.

https://bugzilla.gnome.org/show_bug.cgi?id=690442