ext/wayland/gstwaylandsink.c
@@ -587,9 +587,6 @@ create_window (GstWaylandSink * sink, struct display *display, int width,
       sink);
   wl_shell_surface_set_toplevel (window->shell_surface);
 
-  wl_shell_surface_set_fullscreen (window->shell_surface,
-      WL_SHELL_SURFACE_FULLSCREEN_METHOD_DEFAULT, 0, NULL);
-
   sink->window = window;
 
   g_mutex_unlock (sink->wayland_lock);
